--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
         <div class="container">
             <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
                 <h6 class="text-primary">Team Member</h6>
-                <h1 class="mb-4">Experienced Team Members</h1>
+                <h1 class="mb-4">Core Team Members</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
@@ -271,8 +271,8 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Rasmita Maharana</h5>
-                            <span>Sales Manager</span>
+                            <h5>Monalisa Dalai</h5>
+                            <span>Business Development Manager</span>
                         </div>
                     </div>
                 </div>
@@ -287,8 +287,8 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Mahim Ranjan Rout</h5>
-                            <span>Business Development Manager</span>
+                            <h5>Akash Kumar Behera</h5>
+                            <span>General Manager</span>
                         </div>
                     </div>
                 </div>
@@ -303,11 +303,47 @@
                             </div>
                         </div>
                         <div class="p-4">
-                            <h5>Sribatsha Barik</h5>
-                            <span>Technical Head</span>
+                            <h5>Pratap Kumar Das</h5>
+                            <span>Operation Head</span>
                         </div>
                     </div>
                 </div>
+            </div>
+
+             <div class="row g-4">
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Arpita Biswal</h5>
+                            <span>Customer Relationship Manager</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="team-item rounded overflow-hidden">
+                        <div class="d-flex">
+                            <img class="img-fluid w-75" src="img/user5.jpeg" alt="" style="max-height: 300px;">
+                            <div class="team-social w-25">
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                        <div class="p-4">
+                            <h5>Banty Jena</h5>
+                            <span>Customer Relationship Manager</span>
+                        </div>
+                    </div>
+                </div>
+               
             </div>
         </div>
     </div>
