--- a/about.html
+++ b/about.html
@@ -295,7 +295,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                            <img class="img-fluid w-75" src="img/Prtap kumar das.jpeg" alt="" style="max-height: 300px;">
+                            <img class="img-fluid w-75" src="img/Pratap kumar das.jpeg".jpeg" alt="" style="max-height: 300px;">
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
