--- a/about.html
+++ b/about.html
@@ -237,14 +237,14 @@
                         </div>
                         <div class="p-4">
                              <h5>Kalpna Sahoo</h5>
-                            <span>Sales Head</span>
+                            <span>Managing Director</span>
                         </div>
                     </div>
                 </div> 
                  <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item rounded overflow-hidden">
                         <div class="d-flex">
-                             <img class="img-fluid w-75" src="img/user4.jpeg" alt="" style="max-height: 300px;">
+                            <img class="img-fluid w-75" src="img/Banty jena.png" alt="" style="max-height: 300px;">
                             <div class="team-social w-25">
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
                                 <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
@@ -252,8 +252,8 @@
                             </div>
                         </div>
                         <div class="p-4">
-                           <h5>Rasmita Maharana</h5>
-                            <span>Sales Manager</span>
+                            <h5>Banty Jena</h5>
+                            <span>Customer Relationship Manager</span>
                         </div>
                     </div>
                 </div>
@@ -327,22 +327,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <div class="team-item rounded overflow-hidden">
-                        <div class="d-flex">
-                            <img class="img-fluid w-75" src="img/Banty jena.png" alt="" style="max-height: 300px;">
-                            <div class="team-social w-25">
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-twitter"></i></a>
-                                <a class="btn btn-lg-square btn-outline-primary rounded-circle mt-3" href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="p-4">
-                            <h5>Banty Jena</h5>
-                            <span>Customer Relationship Manager</span>
-                        </div>
-                    </div>
-                </div>
+                
                
             </div>
         </div>
