--- a/termsandcondition.html
+++ b/termsandcondition.html
@@ -96,6 +96,7 @@
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div> -->
+                  <a href="branch.html" class="nav-item nav-link">Our Branch</a>
                 <a href="contact.html" class="nav-item nav-link">Contact</a>
             </div>
             <a href="https://dilipsahoo100.github.io/Solar-Calculator/Dashboard.html" class="btn btn-success rounded-0 py-4 px-lg-5">CRM Login<i class="fa fa-arrow-right ms-3"></i></a>
