--- a/branch.html
+++ b/branch.html
@@ -124,64 +124,63 @@
     <!-- Page Header End -->
 
 
-    <!-- Contact Start -->
-    <div class="container-fluid bg-light overflow-hidden px-lg-0" style="margin: 6rem 0;">
-        <div class="container contact px-lg-0">
-            <div class="row g-0 mx-lg-0">
-               
-                <div class="col-lg-6 pe-lg-0" style="min-height: 400px;">
-                    <div class="position-relative h-100">
+  <div class="container-fluid bg-light overflow-hidden px-lg-0" style="margin: 6rem 0;">
+    <div class="container contact px-lg-0">
+        <div class="row g-0 mx-lg-0">
 
-                       <div class="col-lg-6 pe-lg-0 bg-white">
-    <div class="h-100 d-flex align-items-center">
-        <div class="p-5">
+            <div class="col-lg-6 pe-lg-0 bg-white">
+                <div class="h-100 d-flex align-items-center">
+                    <div class="p-5 w-100">
 
-            <h6 class="text-primary">Our Branches</h6>
-            <h1 class="mb-4">Pragati EcoSolar</h1>
+                        <h6 class="text-primary">Our Branches</h6>
+                        <h1 class="mb-4">Pragati EcoSolar</h1>
 
-            <!-- Branch 1 -->
-            <div class="mb-4">
-                <h5 class="text-dark mb-1">1. BDM: Pratap Dutta</h5>
+                        <!-- ===== Branch 1 ===== -->
+                        <div class="card mb-4 shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title text-dark">1. BDM: Pratap Dutta</h5>
 
-                <p class="mb-1"><strong>(A) Kalahandi:</strong></p>
-                <ul class="mb-2">
-                    <li>Mrampur – 766102</li>
-                    <li>Junagarh – 766014</li>
-                </ul>
+                                <p class="mb-1"><strong>(A) Kalahandi:</strong></p>
+                                <ul>
+                                    <li>Mrampur – 766102</li>
+                                    <li>Junagarh – 766014</li>
+                                </ul>
 
-                <p class="mb-1"><strong>(B) Cuttack:</strong></p>
-                <ul class="mb-2">
-                    <li>Bissam – 765019</li>
-                </ul>
-            </div>
+                                <p class="mb-1"><strong>(B) Cuttack:</strong></p>
+                                <ul>
+                                    <li>Bissam – 765019</li>
+                                </ul>
+                            </div>
+                        </div>
 
-            <!-- Branch 2 -->
-            <div class="mb-4">
-                <h5 class="text-dark mb-1">2. BDM: Prakash Dash</h5>
+                        <!-- ===== Branch 2 ===== -->
+                        <div class="card mb-4 shadow-sm">
+                            <div class="card-body">
+                                <h5 class="card-title text-dark">2. BDM: Prakash Dash</h5>
 
-                <p class="mb-1"><strong>(A) Jajpur:</strong></p>
-                <ul class="mb-2">
-                    <li>Mangalpur – 755011</li>
-                </ul>
-            </div>
+                                <p class="mb-1"><strong>(A) Jajpur:</strong></p>
+                                <ul>
+                                    <li>Mangalpur – 755011</li>
+                                </ul>
+                            </div>
+                        </div>
 
-            <!-- Contact Numbers -->
-            <div class="mt-4">
-                <h6 class="text-primary">Contact Numbers</h6>
-                <p class="mb-1">📞 <strong>9124619222</strong></p>
-                <p class="mb-0">📞 <strong>9124318222</strong></p>
+                        <!-- ===== Contact Numbers ===== -->
+                        <div class="mt-4">
+                            <h6 class="text-primary">Contact Numbers</h6>
+                            <p class="mb-1">📞 <strong>9124619222</strong></p>
+                            <p class="mb-0">📞 <strong>9124318222</strong></p>
+                        </div>
+
+                    </div>
+                </div>
             </div>
 
         </div>
     </div>
 </div>
 
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Contact End -->
+   
 
 
     <!-- Footer Start -->
